class 116 - project css

--- a/teste_de_velocidade_de_digitacao/index.html
+++ b/teste_de_velocidade_de_digitacao/index.html
@@ -14,7 +14,7 @@
 		<!--  -->
 		<script src="assets/js/app.js" defer></script>
 	</head>
-	<body>
+	<body class="clear_theme">
         <!--  -->
 		<h1>Teste de Velocidade de Digitação</h1>
 
@@ -33,7 +33,7 @@
         <textarea name="input" id="input" rows="5"></textarea>
 
         <!--  -->
-        <div class="result" data_result></div>
+        <div id="result" data_result></div>
 
         <!--  -->
         <button id="restart" data_restart>Reiniciar</button>
@@ -42,6 +42,6 @@
         <div id="history" data_history></div>
 
         <!--  -->
-        <button id="toggle theme" data_toggle theme>Alternar</button>
+        <button id="toggle_theme" data_toggle_theme>Alternar</button>
 	</body>
 </html>
