class 117 - saving initial time

--- a/teste_de_velocidade_de_digitacao/index.html
+++ b/teste_de_velocidade_de_digitacao/index.html
@@ -27,10 +27,10 @@
 		</p>
 
 		<!--  -->
-		<div id="text" data_test></div>
+		<div id="text" data_text></div>
 
         <!--  -->
-        <textarea name="input" id="input" rows="5"></textarea>
+        <textarea name="input" id="input" rows="5" data_input></textarea>
 
         <!--  -->
         <div id="result" data_result></div>
